fix header alignment issue

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -57,6 +57,7 @@ body {
 #header {
     background-color: $primary-color;
     @include flexJustify;
+    align-items: center;
     padding: 10px 20px;
     color: $primary-light
 }
